Maemo: Small UI style fix.

--- a/src/plugins/qt4projectmanager/qt-maemo/maemopackagecreationwidget.ui
+++ b/src/plugins/qt4projectmanager/qt-maemo/maemopackagecreationwidget.ui
@@ -23,7 +23,7 @@
       <string>Check this if you want the files below to be deployed directly.</string>
      </property>
      <property name="text">
-      <string>Skip Packaging Step</string>
+      <string>Skip packaging step</string>
      </property>
     </widget>
    </item>
