--- a/src/plugins/coreplugin/actionmanager/commandmappings.ui
+++ b/src/plugins/coreplugin/actionmanager/commandmappings.ui
@@ -112,7 +112,7 @@
          </widget>
         </item>
         <item>
-         <widget class="Utils::FancyLineEdit" name="targetEdit"/>
+         <widget class="Utils::FilterLineEdit" name="targetEdit"/>
         </item>
         <item>
          <widget class="QToolButton" name="resetButton">
