add basic support to show refactor markers
See BaseTextEditor::setRefactorMarkers(...). The markers support
a clicked signal via BaseTextEditor and tooltips. They feature
a cursor, but are always positioned at the end of the line (not block!).

As special gimmick they do extend the document width when they
are positioned outside the document area.

--- a/src/plugins/texteditor/texteditor.qrc
+++ b/src/plugins/texteditor/texteditor.qrc
@@ -1,7 +1,8 @@
 <RCC>
-    <qresource prefix="/texteditor" >
+    <qresource prefix="/texteditor">
         <file>images/finddocuments.png</file>
         <file>images/finddirectory.png</file>
         <file>TextEditor.mimetypes.xml</file>
+        <file>images/refactormarker.png</file>
     </qresource>
 </RCC>
