--- a/src/plugins/qt4projectmanager/qt-maemo/maemopackagecreationwidget.ui
+++ b/src/plugins/qt4projectmanager/qt-maemo/maemopackagecreationwidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>470</width>
-    <height>325</height>
+    <width>478</width>
+    <height>335</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -191,142 +191,16 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <spacer name="horizontalSpacer_3">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Fixed</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>13</width>
-         <height>13</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QTableView" name="packageContentsView">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-         <horstretch>1</horstretch>
-         <verstretch>1</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>400</width>
-         <height>200</height>
-        </size>
-       </property>
-       <property name="selectionMode">
-        <enum>QAbstractItemView::SingleSelection</enum>
-       </property>
-       <property name="selectionBehavior">
-        <enum>QAbstractItemView::SelectRows</enum>
-       </property>
-       <property name="showGrid">
-        <bool>false</bool>
-       </property>
-       <attribute name="horizontalHeaderVisible">
-        <bool>true</bool>
-       </attribute>
-       <attribute name="horizontalHeaderCascadingSectionResizes">
-        <bool>false</bool>
-       </attribute>
-       <attribute name="verticalHeaderVisible">
-        <bool>false</bool>
-       </attribute>
-      </widget>
-     </item>
-     <item>
-      <layout class="QVBoxLayout" name="verticalLayout">
-       <item>
-        <widget class="QToolButton" name="addFileButton">
-         <property name="toolTip">
-          <string>Add File to Package</string>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="icon">
-          <iconset resource="../../coreplugin/core.qrc">
-           <normaloff>:/core/images/plus.png</normaloff>:/core/images/plus.png</iconset>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QToolButton" name="removeFileButton">
-         <property name="toolTip">
-          <string>Remove File from Package</string>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="icon">
-          <iconset resource="../../coreplugin/core.qrc">
-           <normaloff>:/core/images/minus.png</normaloff>:/core/images/minus.png</iconset>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </item>
-    </layout>
+    <widget class="QTabWidget" name="tabWidget">
+     <property name="currentIndex">
+      <number>-1</number>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="../../coreplugin/core.qrc"/>
- </resources>
+ <resources/>
  <connections>
-  <connection>
-   <sender>addFileButton</sender>
-   <signal>clicked()</signal>
-   <receiver>MaemoPackageCreationWidget</receiver>
-   <slot>addFile()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>458</x>
-     <y>134</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>732</x>
-     <y>525</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>removeFileButton</sender>
-   <signal>clicked()</signal>
-   <receiver>MaemoPackageCreationWidget</receiver>
-   <slot>removeFile()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>458</x>
-     <y>162</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>735</x>
-     <y>145</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>skipCheckBox</sender>
    <signal>clicked(bool)</signal>
@@ -366,8 +240,8 @@
    <slot>versionInfoChanged()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>154</x>
-     <y>68</y>
+     <x>233</x>
+     <y>94</y>
     </hint>
     <hint type="destinationlabel">
      <x>5</x>
@@ -382,12 +256,12 @@
    <slot>versionInfoChanged()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>249</x>
-     <y>68</y>
+     <x>339</x>
+     <y>94</y>
     </hint>
     <hint type="destinationlabel">
      <x>466</x>
-     <y>-7</y>
+     <y>0</y>
     </hint>
    </hints>
   </connection>
