added mode buttons to custom qml viewer and qmljsinspector toolbar

--- a/src/plugins/qmljsinspector/qmljsinspector.qrc
+++ b/src/plugins/qmljsinspector/qmljsinspector.qrc
@@ -17,5 +17,6 @@
         <file>images/from-qml-small.png</file>
         <file>images/zoom-small.png</file>
         <file>images/select-marquee-small.png</file>
+        <file>images/designmode.png</file>
     </qresource>
 </RCC>
