--- a/src/plugins/texteditor/displaysettingspage.ui
+++ b/src/plugins/texteditor/displaysettingspage.ui
@@ -96,6 +96,13 @@
         </property>
        </widget>
       </item>
+      <item row="5" column="1">
+       <widget class="QCheckBox" name="integrateDocsIntoTooltips">
+        <property name="text">
+         <string>Integrate Qt docs into tooltips</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
