Maemo: Move INSTALLS information from package step to deploy step.
... because the files are installed even when packaging is disabled.

Reviewed-by: kh1

--- a/src/plugins/qt4projectmanager/qt-maemo/maemodeploystepwidget.ui
+++ b/src/plugins/qt4projectmanager/qt-maemo/maemodeploystepwidget.ui
@@ -1,7 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author/>
- <comment/>
- <exportmacro/>
  <class>MaemoDeployStepWidget</class>
  <widget class="QWidget" name="MaemoDeployStepWidget">
   <property name="geometry">
@@ -15,7 +13,22 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QLabel" name="label">
+     <property name="toolTip">
+      <string>These show the INSTALLS settings from the project file(s).</string>
+     </property>
+     <property name="text">
+      <string>&lt;b&gt;Files to install:&lt;/b&gt;</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QTabWidget" name="tabWidget"/>
+   </item>
+  </layout>
  </widget>
- <pixmapfunction/>
+ <resources/>
  <connections/>
 </ui>
