--- a/src/libs/qmljs/qmljs.qrc
+++ b/src/libs/qmljs/qmljs.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/qmljs">
         <file>images/element.png</file>
         <file>images/property.png</file>
+	<file>images/publicmember.png</file>
     </qresource>
 </RCC>
