Add "Advanced..." button to find tool bar that opens the search dialog.
We had multiple cases where people were assuming that you can't do
project wide search/replace, because they tried Ctrl+f and that is only
single file.

Reviewed-by: Thorbjørn Lindeijer

--- a/src/plugins/find/findwidget.ui
+++ b/src/plugins/find/findwidget.ui
@@ -168,6 +168,16 @@
        </property>
       </spacer>
      </item>
+     <item>
+      <widget class="QToolButton" name="advancedButton">
+       <property name="text">
+        <string>Advanced...</string>
+       </property>
+       <property name="toolButtonStyle">
+        <enum>Qt::ToolButtonTextOnly</enum>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
   </layout>
