--- a/src/plugins/qmlprojectmanager/qmlproject.qrc
+++ b/src/plugins/qmlprojectmanager/qmlproject.qrc
@@ -4,5 +4,11 @@
         <file>images/qmlfolder.png</file>
         <file>images/qmlproject.png</file>
         <file>images/qml_wizard.png</file>
+        <file>wizards/templates/app.pro</file>
+        <file>wizards/templates/qml/app.qml</file>
+        <file>wizards/templates/cpp/qmlapplicationview.h</file>
+        <file>wizards/templates/cpp/symbianicon.svg</file>
+        <file>wizards/templates/cpp/main.cpp</file>
+        <file>wizards/templates/cpp/qmlapplicationview.cpp</file>
     </qresource>
 </RCC>
