--- a/src/plugins/classview/classviewnavigationwidget.ui
+++ b/src/plugins/classview/classviewnavigationwidget.ui
@@ -21,18 +21,9 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QTreeView" name="treeView">
-     <property name="frameShape">
-      <enum>QFrame::NoFrame</enum>
-     </property>
+    <widget class="Utils::NavigationTreeView" name="treeView">
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
-     </property>
-     <property name="textElideMode">
-      <enum>Qt::ElideNone</enum>
-     </property>
-     <property name="uniformRowHeights">
-      <bool>true</bool>
      </property>
      <property name="headerHidden">
       <bool>true</bool>
@@ -41,6 +32,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>Utils::NavigationTreeView</class>
+   <extends>QTreeView</extends>
+   <header>utils/navigationtreeview.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
