QmlDesigner: context pane changing left margin

--- a/src/plugins/qmldesigner/components/propertyeditor/contextpanewidgetimage.ui
+++ b/src/plugins/qmldesigner/components/propertyeditor/contextpanewidgetimage.ui
@@ -6,22 +6,31 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>290</width>
-    <height>84</height>
+    <width>282</width>
+    <height>93</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>2</number>
+   </property>
+   <property name="rightMargin">
+    <number>2</number>
+   </property>
+   <property name="bottomMargin">
+    <number>2</number>
+   </property>
    <property name="horizontalSpacing">
-    <number>6</number>
+    <number>4</number>
    </property>
    <property name="verticalSpacing">
     <number>0</number>
-   </property>
-   <property name="margin">
-    <number>4</number>
    </property>
    <item row="0" column="1" colspan="3">
     <widget class="FileWidget" name="fileWidget">
@@ -251,6 +260,22 @@
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="sizeLabel">
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>10 x 10</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
