--- a/src/plugins/qmldesigner/components/propertyeditor/contextpanewidgetrectangle.ui
+++ b/src/plugins/qmldesigner/components/propertyeditor/contextpanewidgetrectangle.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>255</width>
+    <width>241</width>
     <height>120</height>
    </rect>
   </property>
@@ -14,13 +14,22 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>2</number>
+   </property>
+   <property name="rightMargin">
+    <number>2</number>
+   </property>
+   <property name="bottomMargin">
+    <number>2</number>
+   </property>
    <property name="horizontalSpacing">
     <number>4</number>
    </property>
    <property name="verticalSpacing">
-    <number>2</number>
-   </property>
-   <property name="margin">
     <number>2</number>
    </property>
    <item row="0" column="0">
