--- a/src/plugins/qmldesigner/components/propertyeditor/contextpanetext.ui
+++ b/src/plugins/qmldesigner/components/propertyeditor/contextpanetext.ui
@@ -14,13 +14,22 @@
    <string>Text</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>2</number>
+   </property>
+   <property name="rightMargin">
+    <number>2</number>
+   </property>
+   <property name="bottomMargin">
+    <number>2</number>
+   </property>
    <property name="horizontalSpacing">
     <number>4</number>
    </property>
    <property name="verticalSpacing">
-    <number>2</number>
-   </property>
-   <property name="margin">
     <number>2</number>
    </property>
    <item row="0" column="0" colspan="4">
