--- a/src/plugins/texteditor/displaysettingspage.ui
+++ b/src/plugins/texteditor/displaysettingspage.ui
@@ -97,9 +97,9 @@
        </widget>
       </item>
       <item row="5" column="1">
-       <widget class="QCheckBox" name="integrateDocsIntoTooltips">
+       <widget class="QCheckBox" name="extendTooltips">
         <property name="text">
-         <string>Integrate Qt docs into tooltips</string>
+         <string>Extend tooltips for Qt 4.7 (or later) docs</string>
         </property>
        </widget>
       </item>
