cdb plugin: make the fast dumper initialization an option
Fast dumper init is now on by default.

Reviewed-by: Robert Loehning
(cherry picked from commit 66d75056aefaffe908b50461bf549111af0466d5)

--- a/src/plugins/debugger/cdb/cdboptionspagewidget.ui
+++ b/src/plugins/debugger/cdb/cdboptionspagewidget.ui
@@ -85,10 +85,20 @@
       <string>Other Options</string>
      </property>
      <layout class="QFormLayout" name="formLayout_3">
+      <property name="fieldGrowthPolicy">
+       <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+      </property>
       <item row="0" column="0" colspan="2">
        <widget class="QCheckBox" name="verboseSymbolLoadingCheckBox">
         <property name="text">
          <string>Verbose symbol loading</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QCheckBox" name="fastLoadDebuggingHelpersCheckBox">
+        <property name="text">
+         <string>fast loading of debugging helpers</string>
         </property>
        </widget>
       </item>
