QmlJS Live Preview: Added color box to toolbar

--- a/src/plugins/qmljsinspector/qmljsinspector.qrc
+++ b/src/plugins/qmljsinspector/qmljsinspector.qrc
@@ -18,5 +18,6 @@
         <file>images/zoom-small.png</file>
         <file>images/select-marquee-small.png</file>
         <file>images/designmode.png</file>
+        <file>images/color-picker-small-hicontrast.png</file>
     </qresource>
 </RCC>
